final logic added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Cash Register App</h1>
 
-        <h3>Enter the bill amount & cash given and know the minimum number of notes to return with note value.</h3>
+        <h3>Enter the bill amount & cash given and know the minimum number of notes return to the customer</h3>
 
         <div class="billclass">
 
@@ -24,7 +24,7 @@
             <!-- for given cash -->
             <lable for="cash-given" class="cash-lable">CASH GIVEN</lable>
             <input type="number" id="cash-given" min="0" required/>
-            <buttion id="check-button">CALCULATE</button>
+            <button id="check-button">CALCULATE</button>
         </div>
 
         
